# C2x.Examples

./: .clang-format  CMakeLists.txt  README.md
src/: Makefile  auto.c  copy-file.c  count-char.c  count-words.c  count.c  cursor.c  dir-r.c  dir-sort.c  dir.c  doubly-link.c  fiforead.c  fifowrite.c  file_stat.c  fork.c  generic-test1.c  getopt.c  hash.c  hashtable.c  helloworld.c  inline-asm.c  insertion-sort.c  kill.c  llist-sort.c  llist.c  locale-t.c  locale.c  log.c  main.c  maybe.c  mem-map.c  no-discard.c  pid.c  pipe.c  pipe_message.c  proc_info.c  progress.c  qsort.c  redirect.c  repo.c  (+29 more)
src/SDL3/GL/GL4_hello_world/: Makefile  Makefile.shader  frag.frag  frag.spv  gl_init  gl_init.c
src/SDL3/GL/cmx_gl/: CMakeLists.txt  cmx_glConfig.cmake.in
src/SDL3/GL/cmx_gl/cmx_gl/include/: cmx_gl.h
src/SDL3/GL/cmx_gl/cmx_gl/include/glad/: glad.h
src/SDL3/GL/cmx_gl/cmx_gl/src/: cmx_gl.c
src/SDL3/GL/cmx_gl/ex1/: CMakeLists.txt  fragment.frag  main.c  vert.spv  vertex.vert
src/SDL3/GL/cmx_gl/ex2_compute/: CMakeLists.txt  Makefile.shader  compute.comp  compute.spv  frag.spv  fragment.frag  main.c  vert.spv  vertex.vert
src/SDL3/GL/src/: glad.c
src/binary_search/: bsearch.c  bsearch.h  main.c  spelling_errors.txt
src/compression/: bintree.c  bintree.h  heap.c  heap.h  huffman.c  huffman.h  main.c
src/countsort/: count.c  count.h  main.c
src/deque/: deque.c  deque.h  macro.c  main.c
src/dequeue/: dequeue.c  dequeue.h  macro.c  main.c
src/embed/: embed.c  if-embed.c  quine.c
src/encrypt/: encrypt.c  encrypt.h  main.c
src/getline/: getline.c  getline.h  main.c
src/graph/: matrix.c  visual-graph.c
src/graph/webasm/: Graph.html  Graph.js  Graph.wasm  Makefile.em  index.html  visual-graph2.c
src/hashtable/: hash-count.c  hash-sorted.c  hashtable.c  hashtable.h  main.c
src/hashtable/open_address/: oa-count.c  oa_hashtable.c  oa_hashtable.h
src/heap/: heap-path.c  heap-sort-test.c  heap.c  heap.h  main.c  notes.txt  peek.c  pqueue.c  sort-test.c  sort.c  structure.c  test.c
src/inline/: inline.c  inline.h
src/llist/: ll.c  ll.h  main.c
src/mergesort/: main.c  mergesort.c  mergesort.h
src/mq/: mq-recv.c  mq-send.c  mq.h
src/network/: mx_socket.c  mx_socket.h
src/network/dl/: dl-file.c  main.c
src/network/echo_ip/: echo_ip.c
src/network/fileserve/: fileserve.c
src/network/socket_connect/: main.c
src/network/socket_server/: main.c
src/network/socket_server_queue/: deque.c  dequeue.c  main.c
src/network/uds_client/: client.c
src/network/uds_server/: server.c
src/object/: main.c  object.c  object.h
src/quicksort/: main.c  quicksort.c  quicksort.h
src/rwlib/: rw.c  rw.h
src/set/: main.c  match.c  set.c  set.h
src/shm/: shared.h  shm_create.c  shm_proc.c
src/stack/: main.c  stack.c  stack.h
src/video/: listvideo.c
